# rag

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  Dockerfile.rag  RAG优化.docx  RAG优化差距分析及评测建议.docx  RAG优化进度看板.docx  README.md  _temp_rag.txt  agent.docx  app.py  config.py  database.py  docker-compose.yml  pyproject.toml  read_resume.py  requirements.txt  resume_optimized.py  ui.py  项目优化.docx  项目后端Java升级方案.docx  项目经历_原格式优化版.md  项目经历优化版.md
.claude/: settings.local.json
apps/streamlit/: app.py  ui.py
deployment/docker/: rag-api.Dockerfile  streamlit.Dockerfile
eval_datasets/: kb_13_baseline_run7.json
pages/: chat.py  documents.py  evaluation.py  knowledge_bases.py  login.py  web_import.py
platform/java/: .env.example  README.md  docker-compose.yml
rag_server/: concurrency.py  dependencies.py  main.py  schemas.py
rag_server/routers/: __init__.py  chat.py  retrieval.py
services/: auth_service.py  concurrency.py  context_compressor.py  data_service.py  document_splitter.py  embedding_service.py  feedback_service.py  hybrid_search.py  image_understanding.py  llm_client.py  pipeline.py  query_rewriter.py  rag_engine.py  ragas_evaluator.py  reranker.py  semantic_splitter.py  tag_service.py  vector_store.py  web_crawler.py
services/ingestion/: __init__.py  base.py  file_ingestor.py  web_ingestor.py
smart-doc-search/: .gitignore  README.md  docker-compose.yml  pom.xml
smart-doc-search/chromadb-sidecar/: Dockerfile  main.py  requirements.txt
smart-doc-search/document-service/: Dockerfile
tests/: test_api.py  test_config.py
(+158 files in other folders)
