[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-doc-search"
version = "0.1.0"
description = "基于 RAG 与 LLM 的智能文档检索助手"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "SQLAlchemy>=2.0.25",
    "PyMySQL>=1.1.0",
    "chromadb==1.5.8",
    "PyMuPDF>=1.23.8",
    "python-docx>=1.1.0",
    "tiktoken>=0.5.2",
    "httpx>=0.26.0",
    "pydantic-settings>=2.1.0",
    "loguru>=0.7.2",
    "bcrypt>=4.0.0",
    "jieba>=0.42.1",
    "rank-bm25>=0.2.2",
    "readability-lxml>=0.8.1",
    "lxml>=5.0.0",
    "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
streamlit = ["streamlit>=1.31.0"]
api = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sse-starlette>=1.8.0",
]
dev = ["pytest>=8.0.0"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["smart_doc_search*"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
